--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vanilla GSAP Tailwind boilerplate.",
   "main": "index.js",
   "scripts": {
-    "start": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "start": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
